# zoomkb-builder

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  e2e-verification-report.md  pyproject.toml  test_zoom_page.html  zoom_support_kb_builder_skill_plan.md
.cursor/commands/: zoom.md  zoomkb-build.md  zoomkb-lint.md  zoomkb-refresh.md
.cursor/rules/: neat-freak.mdc  zoomkb.mdc
90-schema/: ingest-rules.md  kb-schema.md  lint-rules.md  page-types.md  source-quality-rubric.md
docs/ideas/: zoom-support-kb-builder.md
docs/reports/: crawl4ai-zoom-support-test-report.md
references/: architecture.md  cli-reference.md  ux-partner-integration.md
src/zoomkb/: __init__.py  classifier.py  cli.py  constants.py  crawler.py  discover.py  extractor.py  ingest.py  lint.py  manifest.py  navigation.py  refresh.py  taxonomy.py  validator.py
tests/: test_cli.py  test_discover.py  test_ingest.py  test_lint.py  test_ux_partner_integration.py  test_validator.py
zoom-phone-kb/: crawl-report.md  freshness-report.md  ingest-report.md  lint-report.md  log.md  manifest.json
zoom-phone-kb/extraction-queue/: KB0074437.prompt.md  KB0074437.result.json  KB0075512.prompt.md  KB0075512.result.json  KB0075917.prompt.md  KB0075917.result.json  KB0081958.prompt.md  KB0081958.result.json  KB0083016.prompt.md  KB0083016.result.json  KB0083412.prompt.md  KB0083412.result.json  KB0083506.prompt.md  KB0083506.result.json  KB0083729.prompt.md  KB0083729.result.json  KB0083812.prompt.md  KB0083812.result.json  KB0083992.prompt.md  KB0083992.result.json  KB0084020.prompt.md  KB0084020.result.json  (+37 more)
(+446 files in other folders)
