[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomkb"
version = "0.1.0"
description = "Zoom Support KB Builder — crawl, clean, classify, and format Zoom Support articles into structured markdown."
requires-python = ">=3.9"
dependencies = [
    "urllib3>=2.0",
    "beautifulsoup4>=4.12",
    "html2text>=2024.2",
    "trafilatura>=1.8",
    "certifi",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.4"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
zoomkb = "zoomkb.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
